--- a/public/base.css
+++ b/public/base.css
@@ -1,44 +1,142 @@
+html{
+  height:100%;
+  min-height: 400px;
+  width: 100%;
+  min-width: 900px;
+}
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+body{
+  height:100%;
+  min-height: 400px;
+  width: 100%;
+  min-width: 900px;
+}
+
+#root{
+  height:100%;
+  min-height: 400px;
+  width: 100%;
+  min-width: 900px;
+}
+
+#root > [data-reactroot] {
+  position: relative;
+  background-color: #E6EBF5;
+  height: 100%
+}
+
 header{
+  position: absolute; /* TODO:毁掉了界面。。。  */
+  font-size: 14px;
+  color: #FFF;
   background: #448aff;
   opacity: 1;
   top: 0;
   width: 100%;
   height: 40px;
+  display: block;
+  z-index: 3000;
+  border-bottom: 2px solid #2a64ca;
 }
+
+header #kb-info{
+  overflow: hidden;
+  height: 100%;
+  margin-left: 0;
+  padding-left: 16px;
+  padding-top: 0;
+  cursor: pointer;
+  line-height: 40px;
+}
+
+header #kbname{
+  font-size: 16px;
+  line-height: 16px;
+  margin-top: 12px;
+  white-space: nowrap;
+}
+
 #toolbar{
   float:left;
-  height: 900px;  /* 100%有问题  */
+  height: 100%;
   width: 80px;
-  background-color: #30414D;
-  color:#767676;
+  background-color: #FFF;
+  margin-left: 16px;
+  /*background-color: #30414D;*/
+  /*color:#767676;*/
   padding: 35px 25px 25px 25px;
-  box-sizing: border-box;
+  padding-bottom: 0;
+  position: relative;
+  display: block;
+}
+
+#firstgly{
+  position: absolute;
+  top:60px;
+  bottom: 20px;
 }
 
 #tohidinput {
   display: none;
 }
 #notes-list {
+  position: relative;
+  margin-left: 8px;
   float:left;
   height: 100%;
-  width: 30%;
-  box-sizing: border-box;
+  width: 400px;
+}
+
+#after-notes-list{
+  position: absolute;
+  top:40px;
+  bottom: 40px;
+  width: inherit;
+}
+
+#container{
+  position: absolute;
+  top: 150px;
+  bottom: 3px;
+  width:400px;
+  height: 80%;
+  overflow-x: auto;
 }
 #note-editor{
+  margin-left: 8px;
+  margin-top: 40px;
   float: left;
-  height: 100%;
+  height: 50%;
   width: 50%;
-  box-sizing: border-box;
+  position: relative;
 }
 
 #todo-item {
   width: inherit;
-  height: 300px;
-  margin-top: 20px;
+  height: 100px;
   margin-bottom: 20px;
 }
-#note-editor textarea {
+
+#form-group{
   height: 100%;
+}
+
+#note-editor input {
+  height: 48px;
+  width:100%;
+  padding: 12px 10px;
+  background-color: #FCFCFC;
+  position: relative;
+}
+#note-editor textarea {
+  margin-top: 2px;
+  position: relative;
+  width: 100%;
+  height: 465px;
   border: 0;
   border-radius: 0;
   padding-top: 15px;
