--- a/public/base.css
+++ b/public/base.css
@@ -15,6 +15,11 @@ body{
   width: 100%;
   min-width: 900px;
 }
+body, input, textarea {
+    font-size: 14px;
+    color: rgb(51, 51, 51);
+    font-family: Helvetica, "Hiragino Sans GB", 微软雅黑, "Microsoft YaHei UI", SimSun, SimHei, arial, sans-serif;
+}
 
 #root{
   height:100%;
@@ -64,20 +69,23 @@ header #kbname{
   float:left;
   height: 100%;
   width: 80px;
-  background-color: #FFF;
   margin-left: 16px;
   /*background-color: #30414D;*/
   /*color:#767676;*/
-  padding: 35px 25px 25px 25px;
   padding-bottom: 0;
   position: relative;
   display: block;
+  box-shadow: 0 0 3px rbga(184,188,196,0.25)
 }
 
 #firstgly{
   position: absolute;
+  padding: 35px 25px 25px 25px;
+  background-color: #FFF;
+  color: #8D8D8D;
+  border: 1px solid #BBBCC4;
+  bottom: 6px;
   top:60px;
-  bottom: 20px;
 }
 
 #tohidinput {
@@ -85,7 +93,7 @@ header #kbname{
 }
 #notes-list {
   position: relative;
-  margin-left: 8px;
+  margin-left: 12px;
   float:left;
   height: 100%;
   width: 400px;
@@ -104,13 +112,13 @@ header #kbname{
   bottom: 3px;
   width:400px;
   height: 80%;
+  border: 1px solid #BBBCC4;
   overflow-x: auto;
 }
 #note-editor{
-  margin-left: 8px;
-  margin-top: 40px;
+  margin-left: 12px;
   float: left;
-  height: 50%;
+  height: 100%;
   width: 50%;
   position: relative;
 }
@@ -122,7 +130,12 @@ header #kbname{
 }
 
 #form-group{
-  height: 100%;
+  position: absolute;
+  border: 1px solid #BBBCC4;
+  /*box-shadow: 0 0 3px rbga(184,188,196,0.25)*/
+  top:60px;
+  bottom: 6px;
+  width: 100%;
 }
 
 #note-editor input {
@@ -130,13 +143,16 @@ header #kbname{
   width:100%;
   padding: 12px 10px;
   background-color: #FCFCFC;
-  position: relative;
+  top: 0px;
+  position: absolute;
 }
 #note-editor textarea {
+  top: 50px;
   margin-top: 2px;
-  position: relative;
+  position: absolute;
   width: 100%;
-  height: 465px;
+  height: 546px;
+  overflow: hidden;
   border: 0;
   border-radius: 0;
   padding-top: 15px;
