editor的插入问题解决了
注意表单的使用方式，必须要与onChange连用

--- a/public/base.css
+++ b/public/base.css
@@ -106,6 +106,12 @@ header #kbname{
   width: inherit;
 }
 
+#search {
+  position:relative;
+  top:5px; /* 相比于原来的位置向下移动5px  */
+}
+
+/*notelist 里面的*/
 #container{
   position: absolute;
   top: 150px;
