--- a/public/base.css
+++ b/public/base.css
@@ -68,7 +68,7 @@ header #kbname{
 #toolbar{
   float:left;
   height: 100%;
-  width: 80px;
+  width: 48px;
   margin-left: 16px;
   /*background-color: #30414D;*/
   /*color:#767676;*/
@@ -80,13 +80,31 @@ header #kbname{
 
 #firstgly{
   position: absolute;
-  padding: 35px 25px 25px 25px;
+  padding-top: 10px;
+  padding-left: 11px;   /* 处于视觉效果  */
+  padding-right: 10px;
   background-color: #FFF;
-  color: #8D8D8D;
+  /*background-color: #E6EBF5;*/
+  /*color: #8D8D8D;*/
+  color:blue;
   border: 1px solid #BBBCC4;
   bottom: 6px;
   top:60px;
+  width: 48px;
 }
+
+#firstgly .glyphicon{
+  width:20px;
+  height:20px;
+  font-size: 24px; /*  change the size of glyphicon*/
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  cursor: pointer;
+  opacity: 0.8;
+  transition: opacity 0.5s ease;
+}
+
 
 #tohidinput {
   display: none;
@@ -102,7 +120,7 @@ header #kbname{
 #after-notes-list{
   position: absolute;
   top:40px;
-  bottom: 40px;
+  bottom: 0;
   width: inherit;
 }
 
@@ -114,18 +132,16 @@ header #kbname{
 /*notelist 里面的*/
 #container{
   position: absolute;
-  top: 140px;
-  bottom: 3px;
+  top: 100px;
+  bottom: 6px;
   width:400px;
-  height: 80%;
   border: 1px solid #BBBCC4;
   overflow-x: auto;
 }
 #note-editor{
-  margin-left: 540px;
-  /*float: left;*/
+  margin-left: 488px;
+  margin-right: 16px;
   height: 100%;
-  width: 50%;
   position: relative;
   /*background-color: #FCFCFC;*/
 }
@@ -133,21 +149,45 @@ header #kbname{
 #todo-item {
   width: inherit;
   height: 100px;
-  /*margin-bottom: 20px;*/
+  cursor: pointer;
   /*border: 1px solid #BBBCC4;*/
-  border-bottom: 1px solid #f0f0f0
+  padding: 16px;
+  border-bottom: 1px solid #f0f0f0;
 }
 
 #todo-item h4{
-  margin-top: 0
+  margin-top: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 14px;
+  line-height: 1.35;
+  white-space: nowrap;
+  color:#333;
+}
+
+#todo-item h4 i{
+  margin-right: 6px;
+}
+
+#todo-item label{
+  font-size: 12px;
+  line-height: 1.35;
+  color: #8C8C8C;
+  white-space: normal;
+  word-break: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
 
 #form-group{
   position: absolute;
-  border: 1px solid #BBBCC4;
+  margin-bottom: 0;
   /*box-shadow: 0 0 3px rbga(184,188,196,0.25)*/
   top:60px;
-  bottom: 6px;
+  bottom:0;
   width: 100%;
 }
 
@@ -169,21 +209,15 @@ header #kbname{
 }
 #note-editor textarea {
   top: 90px;
+  bottom: 6px;
   margin-top: 2px;
   position: absolute;
   width: 100%;
-  height: 520px;
   overflow: hidden;
   border: 0;
   border-radius: 0;
   padding-top: 15px;
   overflow: auto;
+  border: 1px solid #BBBCC4;
 }
 
-#toolbar i{
-  font-size: 30px;
-  margin-bottom: 35px;
-  cursor: pointer;
-  opacity: 0.8;
-  transition: opacity 0.5s ease;
-}
