--- a/public/welcome1.css
+++ b/public/welcome1.css
@@ -100,3 +100,176 @@ h1 small{
     font-size:18px;
     color:#fff;
 }
+
+#DIV_1 {
+    margin: 0 auto;
+    box-sizing: border-box;
+    color: rgb(102, 102, 102);
+    height: 572px;
+    text-decoration: none solid rgb(102, 102, 102);
+    width: 758px;
+    column-rule-color: rgb(102, 102, 102);
+    perspective-origin: 379px 286px;
+    transform-origin: 379px 286px;
+    caret-color: rgb(102, 102, 102);
+    border: 0px none rgb(102, 102, 102);
+    font: normal normal normal normal 12px / normal "Helvetica Neue", "Microsoft Yahei", 微软雅黑, Helvetica, SimSun, SimHei;
+    outline: rgb(102, 102, 102) none 0px;
+    padding: 104px 0px 74px;
+}/*#DIV_1*/
+
+#DIV_2 {
+    box-sizing: border-box;
+    color: rgb(102, 102, 102);
+    height: 394px;
+    max-width: 1024px;
+    text-decoration: none solid rgb(102, 102, 102);
+    width: 758px;
+    column-rule-color: rgb(102, 102, 102);
+    perspective-origin: 379px 197px;
+    transform-origin: 379px 197px;
+    caret-color: rgb(102, 102, 102);
+    border: 0px none rgb(102, 102, 102);
+    font: normal normal normal normal 12px / normal "Helvetica Neue", "Microsoft Yahei", 微软雅黑, Helvetica, SimSun, SimHei;
+    outline: rgb(102, 102, 102) none 0px;
+}/*#DIV_2*/
+
+#DIV_3 {
+    box-sizing: border-box;
+    color: rgb(102, 102, 102);
+    height: 394px;
+    text-decoration: none solid rgb(102, 102, 102);
+    width: 758px;
+    column-rule-color: rgb(102, 102, 102);
+    perspective-origin: 379px 197px;
+    transform-origin: 379px 197px;
+    caret-color: rgb(102, 102, 102);
+    border: 0px none rgb(102, 102, 102);
+    font: normal normal normal normal 12px / normal "Helvetica Neue", "Microsoft Yahei", 微软雅黑, Helvetica, SimSun, SimHei;
+    outline: rgb(102, 102, 102) none 0px;
+}/*#DIV_3*/
+
+#DIV_3:after {
+    box-sizing: border-box;
+    clear: both;
+    color: rgb(102, 102, 102);
+    content: '""';
+    display: table;
+    text-decoration: none solid rgb(102, 102, 102);
+    column-rule-color: rgb(102, 102, 102);
+    caret-color: rgb(102, 102, 102);
+    border: 0px none rgb(102, 102, 102);
+    font: normal normal normal normal 12px / normal "Helvetica Neue", "Microsoft Yahei", 微软雅黑, Helvetica, SimSun, SimHei;
+    outline: rgb(102, 102, 102) none 0px;
+}/*#DIV_3:after*/
+
+#DIV_3:before {
+    box-sizing: border-box;
+    color: rgb(102, 102, 102);
+    content: '""';
+    display: table;
+    text-decoration: none solid rgb(102, 102, 102);
+    column-rule-color: rgb(102, 102, 102);
+    caret-color: rgb(102, 102, 102);
+    border: 0px none rgb(102, 102, 102);
+    font: normal normal normal normal 12px / normal "Helvetica Neue", "Microsoft Yahei", 微软雅黑, Helvetica, SimSun, SimHei;
+    outline: rgb(102, 102, 102) none 0px;
+}/*#DIV_3:before*/
+
+#DIV_4 {
+    bottom: 0px;
+    box-sizing: border-box;
+    color: rgb(102, 102, 102);
+    float: left;
+    height: 303px;
+    left: 315.828px;
+    min-height: 1px;
+    position: relative;
+    right: -315.833px;
+    text-decoration: none solid rgb(102, 102, 102);
+    top: 0px;
+    width: 442.156px;
+    column-rule-color: rgb(102, 102, 102);
+    perspective-origin: 221.078px 151.5px;
+    transform-origin: 221.078px 151.5px;
+    caret-color: rgb(102, 102, 102);
+    border: 0px none rgb(102, 102, 102);
+    font: normal normal normal normal 12px / normal "Helvetica Neue", "Microsoft Yahei", 微软雅黑, Helvetica, SimSun, SimHei;
+    outline: rgb(102, 102, 102) none 0px;
+    padding: 0px 15px;
+}/*#DIV_4*/
+
+#IMG_5 {
+    box-sizing: border-box;
+    color: rgb(102, 102, 102);
+    display: inline-block;
+    height: 300.172px;
+    max-width: 100%;
+    text-decoration: none solid rgb(102, 102, 102);
+    width: 412.156px;
+    column-rule-color: rgb(102, 102, 102);
+    perspective-origin: 206.078px 150.078px;
+    transform-origin: 206.078px 150.078px;
+    caret-color: rgb(102, 102, 102);
+    border: 0px none rgb(102, 102, 102);
+    font: normal normal normal normal 12px / normal "Helvetica Neue", "Microsoft Yahei", 微软雅黑, Helvetica, SimSun, SimHei;
+    outline: rgb(102, 102, 102) none 0px;
+}/*#IMG_5*/
+
+#DIV_6 {
+    bottom: 0px;
+    box-sizing: border-box;
+    color: rgb(102, 102, 102);
+    float: left;
+    height: 394px;
+    left: -442.167px;
+    min-height: 1px;
+    position: relative;
+    right: 442.156px;
+    text-decoration: none solid rgb(102, 102, 102);
+    top: 0px;
+    width: 315.828px;
+    column-rule-color: rgb(102, 102, 102);
+    perspective-origin: 157.906px 197px;
+    transform-origin: 157.906px 197px;
+    caret-color: rgb(102, 102, 102);
+    border: 0px none rgb(102, 102, 102);
+    font: normal normal normal normal 12px / normal "Helvetica Neue", "Microsoft Yahei", 微软雅黑, Helvetica, SimSun, SimHei;
+    outline: rgb(102, 102, 102) none 0px;
+    padding: 0px 15px;
+}/*#DIV_6*/
+
+#H2_7 {
+    box-sizing: border-box;
+    color: rgb(68, 138, 255);
+    height: 84px;
+    text-decoration: none solid rgb(68, 138, 255);
+    width: 285.828px;
+    column-rule-color: rgb(68, 138, 255);
+    perspective-origin: 142.906px 42px;
+    transform-origin: 142.906px 42px;
+    caret-color: rgb(68, 138, 255);
+    border: 0px none rgb(68, 138, 255);
+    font: normal normal normal normal 32px / normal "Helvetica Neue", "Microsoft Yahei", 微软雅黑, Helvetica, SimSun, SimHei;
+    margin: 100px 0px 30px;
+    outline: rgb(68, 138, 255) none 0px;
+}/*#H2_7*/
+
+#P_8 {
+    box-sizing: border-box;
+    color: rgb(102, 102, 102);
+    height: 180px;
+    max-width: 388px;
+    text-decoration: none solid rgb(102, 102, 102);
+    width: 285.828px;
+    column-rule-color: rgb(102, 102, 102);
+    perspective-origin: 142.906px 90px;
+    transform-origin: 142.906px 90px;
+    caret-color: rgb(102, 102, 102);
+    border: 0px none rgb(102, 102, 102);
+    font: normal normal normal normal 18px / 30px "Helvetica Neue", "Microsoft Yahei", 微软雅黑, Helvetica, SimSun, SimHei;
+    margin: 0px;
+    outline: rgb(102, 102, 102) none 0px;
+}/*#P_8*/
+
+
