添加自己的背景图

--- a/public/welcome.css
+++ b/public/welcome.css
@@ -51,7 +51,7 @@
 
 .banner{
     height:670px;
-    background:url("http://img.hb.aicdn.com/ad4c7729e2cbc7059ab1a39413191eb1a86a4d593dc6c-gXx5J2_fw658") no-repeat center center;
+    /*background:url("http://img.hb.aicdn.com/ad4c7729e2cbc7059ab1a39413191eb1a86a4d593dc6c-gXx5J2_fw658") no-repeat center center;*/
     background-size: 100% 100%;
     padding: 80px;
     padding-left: 20px;
