store绑定了，但是新来的数据还有问题

--- a/public/base.css
+++ b/public/base.css
@@ -35,8 +35,8 @@ body, input, textarea {
 }
 
 header{
-  /*position: absolute;  TODO:毁掉了界面。。。  */
-  position: fixed;
+  position: absolute;  /*TODO:毁掉了界面。。。  */
+  /*position: fixed;*/
   font-size: 14px;
   color: #FFF;
   background: #448aff;
