--- a/public/base.css
+++ b/public/base.css
@@ -160,6 +160,7 @@ header #kbname{
   cursor: pointer;
   /*border: 1px solid #BBBCC4;*/
   padding: 16px;
+  padding-top: 1px;
   border-bottom: 1px solid #f0f0f0;
 }
 
