github 插入间隔 bottom

--- a/public/base.css
+++ b/public/base.css
@@ -217,6 +217,7 @@ header #kbname{
 .tag-cloud{
   position: absolute;
   top: 50px;
+  bottom: 0;
   width: 100%;
   background-color: #FCFCFC;
   border: 1px solid #BBBCC4;
